[package]
name = "async-socks5"
version = "0.1.0"
homepage = "https://github.com/parazyd/async-socks5"
description = "Async SOCKS5 client library"
authors = ["parazyd <parazyd@dyne.org>"]
repository = "https://github.com/parazyd/async-socks5"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
async-net = "1.7.0"
futures-lite = "1.13.0"

[dev-dependencies]
smol = "1.3.0"
